--- a/src/components/title_details/_TilteDetails.scss
+++ b/src/components/title_details/_TilteDetails.scss
@@ -475,8 +475,5 @@ span.medium {
 @media (hover: none) {
   .title-details__cast-container {
     scrollbar-color: auto auto;
-    &:hover {
-      scrollbar-color: auto auto;
-    }
   }
 }
