--- a/styles.scss
+++ b/styles.scss
@@ -46,9 +46,6 @@ html {
   --search-box-bg-color: #ffffffbc;
   --light-text-color: #ffffff;
 
-  // --nav-item-hover-background-color-inverted: #eed2ddc2;
-  --nav-search-bar-hover-color: #ffffff;
-  --nav-search-bar-focus-bg-color: #ffffff;
   --nav-items-color: #413b17;
   --nav-items-hover-color: #73682c;
   --nav-text-item-hover-background-color: var(--nav-items-color);
